fix(style): make the bg-color of dark mode darker

--- a/assets/scss/themes/_dark.scss
+++ b/assets/scss/themes/_dark.scss
@@ -2,10 +2,10 @@
 
 [data-theme="dark"] {
     @include defineColorHSL(--color-primary, $primaryColorDarkH, $primaryColorDarkS, $primaryColorDarkL);
-    @include defineColorHSL(--color-bg, 231, 15%, 18%);
+    @include defineColorHSL(--color-bg, 231, 14%, 10%);
     @include defineColorHSL(--color-contrast-lower, 231, 12%, 21%);
     @include defineColorHSL(--color-contrast-low, 235, 7%, 30%);
     @include defineColorHSL(--color-contrast-medium, 240, 2%, 58%);
     @include defineColorHSL(--color-contrast-high, 75, 6%, 87%);
-    @include defineColorHSL(--color-contrast-higher, 60, 15%, 90%);
+    @include defineColorHSL(--color-contrast-higher, 60, 14%, 90%);
 }
